--- a/style.css
+++ b/style.css
@@ -1211,28 +1211,27 @@ section {
     --section-index: 4;
 }
 
-/* Flower Sidebars - Rose Vines */
+/* Flower Sidebars - Hanging Vines */
 .flower-sidebar {
     position: fixed;
     top: 0;
     height: 100vh;
-    width: 200px;
+    width: 100px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     z-index: 10;
     pointer-events: none;
     opacity: 0;
     animation: flowersEntry 1.8s cubic-bezier(0.16, 1, 0.3, 1) 0.5s forwards;
-    padding-top: 30px;
 }
 
 .flower-sidebar.left {
-    left: 0px;
+    left: 20px;
 }
 
 .flower-sidebar.right {
-    right: 0px;
+    right: 20px;
 }
 
 /* Rose Vine Image Styling - Using Mask to Remove Background */
